Move to the safer .env to store secrets/keys

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
+.env
+pyenv.cfg
 important.py
 init_database.py
 *.pyc
 *__pycache__
-/data/storage
-/data/storage_backup
-/tensorflow/training/
+data/storage
+data/storage_backup
+tensorflow/training/
+bin/
+build/
+lib/
+lib64/
+.vs/
+.idea/
